// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Color selector examples AvailableValuesColorSelectorComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-6 v-align-items-center v-flex v-flex-row v-flex-wrap"
    valignitemscenter=""
    vflex=""
    vflexwrap=""
    vgap="6"
  >
    <input
      aria-describedby="values-a11y-color-tooltip"
      class="v-input v-flex-grow-0"
      id="color-selector-values"
      style="flex-basis: 5%;"
      type="color"
      v-input=""
      value="#a4afe0"
      vflexbasis="5%"
      vflexgrow0=""
    />
    <label
      class="v-label"
      for="color-selector-values"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      placement="top"
      style="--v-dropdown-menu-surface-margin-block-start: 0;"
      v-floating-ui-container=""
    >
      <button
        aria-describedby="values-a11y-color-tooltip"
        aria-label="Color selector accessibility information"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-dropdown v-button-icon v-button-small v-button-tertiary"
        type="button"
        v-button-icon=""
        v-floating-ui-trigger=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-accessibility v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-accessibility-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M2.34338 2.34338C5.46758 -0.780809 10.5327 -0.78081 13.6569 2.34338C16.7809 5.46759 16.781 10.5327 13.6569 13.6569L12.2428 12.2428C14.5859 9.89969 14.5858 6.1006 12.2428 3.75745C9.89965 1.4143 6.10059 1.4143 3.75745 3.75745C1.4143 6.10059 1.4143 9.89965 3.75745 12.2428L2.34338 13.6569C-0.78081 10.5327 -0.78081 5.46758 2.34338 2.34338Z"
          />
          <path
            class="v-icon-primary"
            d="M12 10H9V10.9629L10.8848 14.5332L9.11523 15.4668L8 13.3525L6.88477 15.4668L5.11523 14.5332L7 10.9629V10H4V8H12V10ZM8 4C9.10457 4 10 4.89543 10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4Z"
          />
        </svg>
      </button>
      <span
        class="v-surface v-tooltip"
        id="values-a11y-color-tooltip"
        role="tooltip"
        style="top: 0px; left: 0px; display: none; z-index: 700;"
        v-tooltip=""
      >
        For RGB, use values between 0-255. For HSL, use H values between 0-359, S and L values between 0-100%. For hex, use the format #RRGGBB and values between 0-9 or A-F.
      </span>
    </div>
  </div>
  <code>
    Hex value: #a4afe0
  </code>
  <code>
    RGB value: { r: 164, g: 175, b: 224 }
  </code>
  <code>
    HSL value: { h: 229, s: 49.2%, l: 76.1% }
  </code>
</div>
`;

exports[`Color selector examples DefaultColorSelectorComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-6 v-align-items-center v-flex v-flex-row v-flex-wrap"
    valignitemscenter=""
    vflex=""
    vflexwrap=""
    vgap="6"
  >
    <input
      aria-describedby="default-a11y-color-tooltip"
      class="v-input v-flex-grow-0"
      id="default-color-selector-input"
      style="flex-basis: 5%;"
      type="color"
      v-input=""
      value=""
      vflexbasis="5%"
      vflexgrow0=""
    />
    <label
      class="v-label"
      for="default-color-selector-input"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      placement="right"
      style="--v-dropdown-menu-surface-margin-block-start: 0;"
      v-floating-ui-container=""
    >
      <button
        aria-describedby="default-a11y-color-tooltip"
        aria-label="Color selector accessibility information"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-dropdown v-button-icon v-button-small v-button-tertiary"
        type="button"
        v-button-icon=""
        v-floating-ui-trigger=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-accessibility v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-accessibility-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M2.34338 2.34338C5.46758 -0.780809 10.5327 -0.78081 13.6569 2.34338C16.7809 5.46759 16.781 10.5327 13.6569 13.6569L12.2428 12.2428C14.5859 9.89969 14.5858 6.1006 12.2428 3.75745C9.89965 1.4143 6.10059 1.4143 3.75745 3.75745C1.4143 6.10059 1.4143 9.89965 3.75745 12.2428L2.34338 13.6569C-0.78081 10.5327 -0.78081 5.46758 2.34338 2.34338Z"
          />
          <path
            class="v-icon-primary"
            d="M12 10H9V10.9629L10.8848 14.5332L9.11523 15.4668L8 13.3525L6.88477 15.4668L5.11523 14.5332L7 10.9629V10H4V8H12V10ZM8 4C9.10457 4 10 4.89543 10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4Z"
          />
        </svg>
      </button>
      <span
        class="v-surface v-tooltip"
        id="default-a11y-color-tooltip"
        role="tooltip"
        style="top: 0px; left: 0px; display: none; z-index: 700;"
        v-tooltip=""
      >
        For RGB, use values between 0-255. For HSL, use H values between 0-359, S and L values between 0-100%. For hex, use the format #RRGGBB and values between 0-9 or A-F.
      </span>
    </div>
  </div>
</div>
`;

exports[`Color selector examples DisabledColorSelectorComponent should render correctly 1`] = `
<div>
  <div
    class="v-gap-6 v-align-items-center v-flex v-flex-row v-flex-wrap"
    valignitemscenter=""
    vflex=""
    vflexwrap=""
    vgap="6"
  >
    <input
      aria-describedby="disabled-a11y-color-tooltip"
      class="v-input v-flex-grow-0"
      disabled="disabled"
      id="disabled-color-selector-input"
      style="flex-basis: 5%;"
      type="color"
      v-input=""
      value=""
      vflexbasis="5%"
      vflexgrow0=""
    />
    <label
      class="v-label"
      for="disabled-color-selector-input"
      id="a-v-label-0"
      v-label=""
    >
      Label
    </label>
    <div
      placement="top"
      style="--v-dropdown-menu-surface-margin-block-start: 0;"
      v-floating-ui-container=""
    >
      <button
        aria-describedby="disabled-a11y-color-tooltip"
        aria-label="Color selector accessibility information"
        buttoncolor="tertiary"
        buttonsize="small"
        class="v-button v-dropdown v-button-icon v-button-small v-button-tertiary"
        disabled="disabled"
        type="button"
        v-button-icon=""
        v-floating-ui-trigger=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-accessibility v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          v-icon-visa-accessibility-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-secondary"
            d="M2.34338 2.34338C5.46758 -0.780809 10.5327 -0.78081 13.6569 2.34338C16.7809 5.46759 16.781 10.5327 13.6569 13.6569L12.2428 12.2428C14.5859 9.89969 14.5858 6.1006 12.2428 3.75745C9.89965 1.4143 6.10059 1.4143 3.75745 3.75745C1.4143 6.10059 1.4143 9.89965 3.75745 12.2428L2.34338 13.6569C-0.78081 10.5327 -0.78081 5.46758 2.34338 2.34338Z"
          />
          <path
            class="v-icon-primary"
            d="M12 10H9V10.9629L10.8848 14.5332L9.11523 15.4668L8 13.3525L6.88477 15.4668L5.11523 14.5332L7 10.9629V10H4V8H12V10ZM8 4C9.10457 4 10 4.89543 10 6C10 7.10457 9.10457 8 8 8C6.89543 8 6 7.10457 6 6C6 4.89543 6.89543 4 8 4Z"
          />
        </svg>
      </button>
      <span
        class="v-surface v-tooltip"
        id="disabled-a11y-color-tooltip"
        role="tooltip"
        style="top: 0px; left: 0px; display: none; z-index: 700;"
        v-tooltip=""
      >
        For RGB, use disabled between 0–255. For HSL, use H disabled between 0–359, S and L disabled between 0–100%. For hex, use the format #RRGGBB and disabled between 0–9 or A–F.
      </span>
    </div>
  </div>
</div>
`;
